# BEInit

./: .gitignore  Cargo.toml
assets/: beinit.cfg.json  beinit.db.json
bei/: Cargo.toml
bei/assets/: .env  bei.cfg.json  bei.db.json
bei/src/: commands.rs  main.rs  project_manager.rs  utils.rs
bei/src/download_manager/: bun_download.rs  composer_download.rs  download_and_extract.rs  mariadb_download.rs  php_download.rs
bei/src/project_manager/: read_cfg.rs  service_manager.rs  status.rs
bei/src/utils/: bei_paths.rs  bei_props.rs
bei_install/: Cargo.toml
bei_install/src/: bei_path.rs  main.rs
beinit_install/: Cargo.toml
beinit_install/src/: beinit_path.rs  main.rs
beinit_tool/: Cargo.toml
beinit_tool/assets/: beinit.cfg.json  beinit.db.env
beinit_tool/src/: commands.rs  main.rs  project_manager.rs
beinit_tool/src/download_manager/: composer_download.rs  download_and_extract.rs  get_download_url.rs
beinit_tool/src/project_manager/: read_cfg.rs  service_manager.rs
beinit_tool/src/utils/: beinit_props.rs
project_test/: .gitignore  BEI.md  bei.cfg.json
project_test/backend/: api.php  composer.json
project_test/frontend/: index.html
project_test/frontend/src/: main.ts
project_test/frontend/src/css/: main.css
src/: commands.rs  download_manager.rs  utils.rs
src/download_manager/: bun_download.rs  download_and_extract.rs  get_download_url.rs  mariadb_download.rs  php_download.rs
src/project_manager/: read_cfg.rs  service_manager.rs
src/utils/: beinit_paths.rs  beinit_props.rs
