[workspace]
resolver = "2"
members = [
  "beinit_tool",
  "beinit_install"
]

[workspace.package]
version = "1.1.0"
edition = "2024"
authors = ["g0uvea <contato@g0uvea.com>"]
repository = "https://github.com/OsPrimatas/BEInit"
license = "MIT"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
zip = { version = "8.4.0"}
ctrlc = "3.5.2"
regex = "1.12.3"
serde_json = "1.0.149"
directories = "6.0.0"
colored = "3.1.1"
tar = "0.4.45"
flate2 = "1.1.9"
