[package]
name = "bei"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
reqwest.workspace = true
tokio.workspace = true
zip.workspace = true
ctrlc.workspace = true
regex.workspace = true
serde_json.workspace = true
directories.workspace = true
colored.workspace = true
tar.workspace = true
flate2.workspace = true
